crates/daemonizable-e2e-tests/tests/macro_ui/fail_on_non_daemonizable_impl.rs
//! Attaching the attribute to an impl of some other trait must be rejected
//! (the trait path has to end in the segment `Daemonizable`).

#![allow(dead_code)]

trait SomeOtherTrait {}

struct App;

#[daemonizable::main]
impl SomeOtherTrait for App {}

fn main() {}
